--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ html {
 body {
 	/*background image*/
 	font-family: "Century Gothic";
-	background-image: url(images/wood2.png);
+	background-image: url(../images/wood2.png);
 	background-repeat: repeat;
 	height: 100%;
 }
@@ -115,6 +115,9 @@ h6 {
 	font-weight: 800;
 }
 
+p {
+	line-height: 28px;
+}
 /*-----------Product Page----------- */
 .product-card {
 	padding: 25px;
